# evaluador-flujo-intent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  00-INDEX.md  AGENTS.md  CLAUDE.md  CONSTITUTION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/commands/: analyze.md  clarify.md
.github/workflows/: ci.yml
.opencode/command/: analyze.md  clarify.md
.opencode/plugin/: sdd-gate.js
.sdd/: current-spec
docs/: AGENT-INVOCATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  IDEAS.md  PRODUCT.md  SDD-ENFORCEMENT.md  SKILLS-MULTITOOL.md  SPEC-FORMAT.md
docs/playbooks/: analyze.md  clarify.md
historial/: sdd.md
schemas/: FI_Orquestador_Input.schema.json
specs/: SPEC-000-bootstrap.md  SPEC-000-naming.md  SPEC-001-single-case-input.md  SPEC-002-agent-client.md  SPEC-002b-message-builder.md  SPEC-003-classification-evaluator.md  SPEC-003b-rejected-response.md  SPEC-004-single-case-file.md  SPEC-005-run-persistence.md  SPEC-006-batch-suite.md  SPEC-007-agent-trace.md  SPEC-008-suite-metrics.md  SPEC-009-parallel-execution.md  SPEC-010-batch-trace.md  SPEC-011-agent-under-test.md  SPEC-012-translation-evaluator.md  SPEC-013-client-adapter-selection.md  SPECS_REGISTRY.md
src/: runner.py
tools/: bootstrap_hooks.py  check_constitution.py  check_naming.py  check_traceability.py  connection_check.py  conversation_probe.py  dump_agent_trace.py  e2e_probe.py  gen_skill_adapters.py  list_orchestrate_instances.py  pipeline_local.sh  schema_drift_check.py  sdd_gate.py  sdd_reset.py
(+48 files in other folders)
